Basic ALU ops seem to work, load and store. Need to test branches.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
 		"stdint.h": "c",
 		"cstdint": "c",
 		"soc_io.h": "c",
-		"soc_core.h": "c"
+		"soc_core.h": "c",
+		"new": "cpp"
 	},
 	// "workbench.colorTheme": "Xcode Default (Light)"
 }
