--- a/rtl/cpu_v2/pipeline_tester/Makefile
+++ b/rtl/cpu_v2/pipeline_tester/Makefile
@@ -1,13 +1,13 @@
-VERILOG_DIR=../
-HDL_FILES=./cpu_pipelined.sv $(VERILOG_DIR)/alu/alu.sv
-SIM_DIR=../../software/simulator
+VERILOG_DIR=../../
+HDL_FILES=../cpu_pipelined.sv $(VERILOG_DIR)/alu/alu.sv
+SIM_DIR=../../../software/simulator
 ASSEMBLER=$(SIM_DIR)/asm2bin.py
 PROJNAME=cpu_pipelined
 
 .PHONY: run
 
 run:  obj_dir/V$(PROJNAME)
-	obj_dir/V$(PROJNAME) test_build/program.bin
+	obj_dir/V$(PROJNAME) ../test_build/program.bin
 
 obj_dir/V$(PROJNAME): generate
 	$(MAKE) -C obj_dir -f V$(PROJNAME).mk V$(PROJNAME)
