--- a/software/programs/test_embedded/Makefile
+++ b/software/programs/test_embedded/Makefile
@@ -5,7 +5,7 @@ LIB_SOURCES=$(LIBDIR)/crt0.S $(LIBDIR)/soc_core.c $(LIBDIR)/soc_io.c
 COMPILE=riscv32-unknown-elf-gcc -I$(LIBDIR) -g -march=rv32im -mabi=ilp32  -Wall -nostartfiles  -ffunction-sections -fdata-sections -mstrict-align -Wl,--gc-sections -ffp-contract=off -lm -lc -lgcc $(LIB_SOURCES)
 
 .PHONY: all
-all: build/icefun_main.hex build/upduino_main.hex build/graphics_test.hex build/cgol.hex build/flash_test.hex build/ecp5_test.hex
+all: build/icefun_main.hex build/upduino_main.hex build/graphics_test.hex build/pipelined_dhrystones.hex build/cgol.hex build/flash_test.hex build/ecp5_test.hex
 
 .PHONY: sim
 sim: build/icefun_main.hex
@@ -40,6 +40,12 @@ build/cgol.hex: cgol.c build
 build/flash_test.hex: flash_test.c build
 	$(COMPILE) -T$(LIBDIR)/map_spram.ld flash_test.c -o build/flash_test.elf
 	$(OBJCOPY) build/flash_test.elf --hex -o build/flash_test.hex
+
+.PHONY: build/pipelined_dhrystones.hex
+build/pipelined_dhrystones.hex: pipelined_dhrystones.c build
+	$(COMPILE) -T$(LIBDIR)/map_modifiedharvard.ld pipelined_dhrystones.c -o build/pipelined_dhrystones.elf
+	$(OBJCOPY) -T build/pipelined_dhrystones.elf --hex -o build/pipelined_dhrystones_progrom.hex
+	$(OBJCOPY) -D build/pipelined_dhrystones.elf --hex -o build/pipelined_dhrystones_ram.hex
 
 build:
 	mkdir -p build
