--- a/rtl/soc_ecp5/Makefile
+++ b/rtl/soc_ecp5/Makefile
@@ -11,7 +11,7 @@ all: build/$(PROJNAME).svf build/$(PROJNAME).bit
 
 build/$(PROJNAME).json: $(SYNTH_SRCS) build/phony.hex
 # -no-rw-check 
-	yosys -q -p "read_verilog -I./ -I$(COMMONDIR) -sv $(SYNTH_SRCS); synth_ecp5 -abc9 -top $(PROJNAME) -json $@;" 
+	yosys -q -p "read_verilog -I./ -I$(COMMONDIR) -sv $(SYNTH_SRCS); synth_ecp5 -abc9 -no-rw-check -top $(PROJNAME) -json $@;" 
 #	yosys -q -p 'read_verilog $(SYNTH_SRCS); synth_ecp5 -top $(PROJNAME) -abc9 -json $@'
 
 build/$(PROJNAME).config: build/$(PROJNAME).json $(LPF)
@@ -26,11 +26,8 @@ build/$(PROJNAME).bit: build/$(PROJNAME).config
 build/phony.hex:
 	ecpbram -g build/phony.hex -w 32 -d $(MEMSIZE)
 
-# build/blink_tb: $(SIM_SRCS)
-# 	iverilog -I `yosys-config --datdir/ecp5/` `yosys-config --datdir/ecp5/cells_sim.v` $(SIM_SRCS) -o $@
-
-# build/blink_tb.vcd: build/blink_tb
-# 	build/blink_tb
+lint:
+	verilator --lint-only -DVERILATOR_LINT -Werror-UNUSED -Wall -Wno-DECLFILENAME -Wno-GENUNNAMED -I$(COMMONDIR) -I../ -I./ --top soc_ecp5 $(SYNTH_SRCS)
 
 prog: build/$(PROJNAME).bit
 	ecpprog -S $<
