--- a/rtl/soc_ecp5/Makefile
+++ b/rtl/soc_ecp5/Makefile
@@ -1,5 +1,5 @@
 PROJNAME=soc_ecp5
-SYNTH_SRCS=../cpu_v2/cpu_pipelined.sv ../alu/alu.sv ./$(PROJNAME).sv ../common/bus_hub_2.sv ../fpga/parallel_port.sv
+SYNTH_SRCS=../cpu_v2/cpu_pipelined.sv ../alu/alu.sv ./$(PROJNAME).sv ../common/bus_hub_2_pl.sv ../fpga/parallel_port.sv
 COMMONDIR=../common
 
 PACKAGE=CABGA256
