--- a/software/programs/test_embedded/Makefile
+++ b/software/programs/test_embedded/Makefile
@@ -6,7 +6,7 @@ COMPILE=riscv32-unknown-elf-gcc -I$(LIBDIR) -g -march=rv32im -mabi=ilp32  -Wall 
 
 #
 .PHONY: all
-all: build/icefun_main.hex build/upduino_main.hex build/graphics_test.hex build/pipelined_dhrystones.hex build/cgol.hex build/flash_test.hex build/ecp5_test.hex
+all: build/icefun_main.hex build/upduino_main.hex build/graphics_test.hex build/dhrystones.hex build/pipelined_dhrystones.hex build/cgol.hex build/flash_test.hex build/ecp5_test.hex
 
 .PHONY: sim
 sim: build/icefun_main.hex
@@ -46,6 +46,12 @@ build/flash_test.hex: flash_test.c build
 build/pipelined_dhrystones.hex: pipelined_dhrystones.c build
 	$(COMPILE) -O5 -T$(LIBDIR)/map_ecp5.ld pipelined_dhrystones.c -o build/pipelined_dhrystones.elf
 	$(OBJCOPY) build/pipelined_dhrystones.elf --hex -o build/pipelined_dhrystones.hex
+# 	$(OBJCOPY) -D build/pipelined_dhrystones.elf --hex -o build/pipelined_dhrystones_ram.hex
+
+.PHONY: build/dhrystones.hex
+build/dhrystones.hex: pipelined_dhrystones.c build
+	$(COMPILE) -O5 -T$(LIBDIR)/map_spram.ld pipelined_dhrystones.c -o build/dhrystones.elf
+	$(OBJCOPY) build/dhrystones.elf --hex -o build/dhrystones.hex
 # 	$(OBJCOPY) -D build/pipelined_dhrystones.elf --hex -o build/pipelined_dhrystones_ram.hex
 
 build:
