--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -41,11 +41,11 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5
       - name: Build with mdBook
-        run: mdbook build
+        run: mdbook build ./cpudesign_docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./cpudesign_docs
+          path: ./cpudesign_docs/book
 
   # Deployment job
   deploy:
